--- a/frontpage.css
+++ b/frontpage.css
@@ -30,14 +30,11 @@ body{
     text-align: right;
     padding-right: 60px;
     text-transform: uppercase;
-    font-weight: lighter;
-    font-size: 30px;
+    font-weight: 25px;
+    font-size: 35px;
 }
 
-.button{
-  width: 150px;
-    background: #F2C94C;
-    height: 50px;
+.quizbtn{
     text-align: center;
     line-height: 50px;
     float: right;
@@ -61,6 +58,7 @@ body{
    text-transform: uppercase;
     font-size: 30px;
     letter-spacing: 1px;
+      font-weight: 25px;
   }
   
   .input, .message, .area{
@@ -91,10 +89,7 @@ body{
     height: 150px;
   }
 
-  .btn{
-    width: 150px;
-    background: #F2C94C;
-    height: 50px;
+  .submitbtn{
     text-align: center;
     line-height: 50px;
     margin: 0 auto;
@@ -104,4 +99,5 @@ body{
 
   footer{
     color: white;
+      margin: 0 auto;
   }
