--- a/destinations.css
+++ b/destinations.css
@@ -119,6 +119,22 @@ img {
     position: relative;
     }
 
+.button2 {
+    display:inline-block;
+    padding:0.35em 1.2em;
+    border:0.1em solid #f2c94c;
+    margin:0 0.3em 0.3em 0;
+    border-radius:0.12em;
+    box-sizing: border-box;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    color: #000000;
+    background-color:#FFFFFF;
+    text-align:center;
+    transition: all 0.2s;
+    position: relative;
+    }
+
  a.button1:hover{
     color:#000000;
     background-color:#FFFFFF
