--- a/frontpage.css
+++ b/frontpage.css
@@ -3,6 +3,116 @@
 body{
     background-color: black;
 }
+/*Top of homepage*/
+
+nav {
+    display: flex;
+    font-family: "Arial";
+    font-weight: 300;
+    font-size: 13px;
+    outline: none;
+    box-sizing: border-box;
+    justify-content: space-between;
+    align-items: center;
+    height: 80px;
+    width: 100%;
+    background-color: transparent;
+    color: white;
+  }
+​
+  label.logo {
+    font-size: 30px;
+    font-weight: bold;
+    text-align: left;
+    padding: 0 100px;
+    background-color:transparent;
+    color: white;
+  }
+  
+​
+  nav ul li {
+    display: inline-block;
+    margin: 0 5px;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+​
+  nav ul li a {
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 3px;
+    padding: 3px 6;
+    text-transform: uppercase;
+    text-decoration: none;
+  }
+  
+  a.active, a:hover {  
+  transition: 5s;
+  }
+​
+  header {
+    height: 600px;
+    width: 100%;
+    background: url("images/homepage.png");
+    overflow: hidden;
+    }
+    
+​
+  img {
+   object-fit: cover;
+}
+​
+  .column {
+    width: 100%;
+    height: 150px;
+    padding-top: 50px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 50px;
+    background-color:black;
+    border: 6px solid black;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px 15px 10px 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    }
+  
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  body {
+  background-color: rgb(0, 0, 0);
+  }
+​
+  h1 { 
+  padding: 60px;
+  text-align: center;
+  color: white;
+  font-size: 80px;
+  margin-left: 2em;
+  margin-right: 2em;
+  }
+​
+  button {
+color:black;
+text-transform: uppercase;
+font-weight: bold;
+background: #F2C94C;
+padding: 8px;
+border-radius: 2px;
+display: inline-block;
+border: none;
+transition: all 0.4s ease 0s;
+}
+
 /*Quiz elements*/
 .quiz{
     border-radius: 8px;
