--- a/frontpage.css
+++ b/frontpage.css
@@ -5,7 +5,7 @@ body{
 }
 /*Top of homepage*/
 
-nav {
+.nav {
     display: flex;
     font-family: "Arial";
     font-weight: 300;
@@ -19,7 +19,7 @@ nav {
     background-color: transparent;
     color: white;
   }
-​
+
   label.logo {
     font-size: 30px;
     font-weight: bold;
@@ -29,8 +29,7 @@ nav {
     color: white;
   }
   
-​
-  nav ul li {
+  .nav ul li {
     display: inline-block;
     margin: 0 5px;
     color: black;
@@ -38,8 +37,8 @@ nav {
     padding: 14px 16px;
     text-decoration: none;
   }
-​
-  nav ul li a {
+
+  .nav ul li a {
     color: white;
     font-size: 14px;
     font-weight: bold;
@@ -52,7 +51,7 @@ nav {
   a.active, a:hover {  
   transition: 5s;
   }
-​
+
   header {
     height: 600px;
     width: 100%;
@@ -60,11 +59,10 @@ nav {
     overflow: hidden;
     }
     
-​
   img {
    object-fit: cover;
 }
-​
+
   .column {
     width: 100%;
     height: 150px;
@@ -91,7 +89,7 @@ nav {
   body {
   background-color: rgb(0, 0, 0);
   }
-​
+
   h1 { 
   padding: 60px;
   text-align: center;
