--- a/destinations.css
+++ b/destinations.css
@@ -10,6 +10,45 @@ body {
   color: #555;
 }
 
+	
+   nav {
+    display: flex;
+    font-family: 'Roboto', 'sans-serif';
+    font-weight: 300;
+    font-size: 13px;
+    outline: none;
+    box-sizing: border-box;
+    justify-content: space-between;
+    align-items: center;
+    height: 80px;
+    width: 100%;
+    background-color: transparent;
+    color: white;
+  }
+  nav ul li {
+    display: inline-block;
+    margin: 0 5px;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+
+  nav ul li a {
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 3px;
+    padding: 3px 6;
+    text-transform: uppercase;
+    text-decoration: none;
+  }
+  
+  a.active, a:hover {  
+  transition: 5s;
+  }
+
+
 p {
   margin-bottom: 2em;
 }
