--- a/destinations.css
+++ b/destinations.css
@@ -11,7 +11,7 @@ body {
 }
 
 	
-   nav {
+   .nav {
     display: flex;
     font-family: 'Roboto', 'sans-serif';
     font-weight: 300;
@@ -23,8 +23,9 @@ body {
     height: 80px;
     width: 100%;
     background-color: transparent;
-    color: white;
+    color: white;   
   }
+
   nav ul li {
     display: inline-block;
     margin: 0 5px;
