--- a/frontpage.css
+++ b/frontpage.css
@@ -16,9 +16,10 @@ body{
 
 .about img{
     float: right;
-    width: 200px;
-    height: 250px;
+    width: 300px;
+    height: 350px;
     text-align: center;
+    opacity: 0.5;
 }
 
 .about p{
