--- a/frontpage.css
+++ b/frontpage.css
@@ -16,10 +16,11 @@ body{
 
 .about img{
     float: right;
-    width: 350px;
+    width: 300px;
     height: 300px;
     text-align: center;
     opacity: 0.3;
+    position: relative;
 }
 
 .about p{
